Fix layout issues for mobile devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,6 @@ p {
   margin-top: 0;
 }
 
-.header {
-  padding: 1rem;
-}
 @media screen and (max-width: 340px) {
   html {
     font-size: 50%;
@@ -639,6 +636,12 @@ a {
   text-align: center;
 }
 
+@media screen and (max-width: 300px) {
+  .callout {
+    padding: 2rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
@@ -749,7 +752,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 0.2rem 1rem;
 }
 
 .nav__logo {
@@ -800,9 +803,16 @@ a {
   .nav__logo {
     width: 80%;
   }
+
+  .nav__toggler {
+    width: 35px;
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .nav {
+    padding: 0.5rem 1rem;
+  }
   .nav__logo {
     transform: translateY(5px);
   }
